# iterfzf

./: .editorconfig  .gitignore  .travis.yml  MANIFEST.in  README.md  README.rst  appveyor.yml  bitbucket-pipelines.yml  build_dist.py  iterfzf.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: release.yaml  test.yaml
examples/: kv.py  pokemon.py  pokemon.txt
iterfzf/: __init__.py  __init__.pyi  test_iterfzf.py
mkbak_iterfzf/: __init__.py  __init__.pyi
