[project]
name = "iterfzf"
description = "Pythonic interface to fzf"
readme = "README.rst"
keywords = ["fzf"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console :: Curses",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: BSD :: FreeBSD",
  "Operating System :: POSIX :: BSD :: OpenBSD",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Terminals",
]
authors = [
  { name = "Hong Minhee (洪 民憙)", email = "hong@minhee.org" },
]
license = { file = "LICENSE" }
requires-python = ">= 3.8"
dynamic = ["version"]

[project.urls]
"Source Code" = "https://github.com/dahlia/iterfzf"
"Issue Tracker" = "https://github.com/dahlia/iterfzf/issues"
Downloads = "https://github.com/dahlia/iterfzf/releases"

[build]
sdist = true

[build-system]
requires = ["flit_core >= 3.2, < 4", "packaging >= 22"]
backend-path = ["."]
build-backend = "build_dist"

[tool.flit.sdist]
include = ["build_dist.py", "iterfzf/fzf-*-release.json"]
exclude = ["iterfzf/fzf", "itefzf/fzf.exe"]

[tool.yapfignore]
ignore_patterns = [
  ".tox"
]

[tool.yapf]
based_on_style = "pep8"
column_limit = 79
dedent_closing_brackets = true
indent_dictionary_value = true
